--- a/setup.cfg
+++ b/setup.cfg
@@ -7,4 +7,6 @@ extend_ignore = D202, W503
 per_file_ignores = */__init__.py:D104
 
 [tool:pytest]
-addopts = -p no:warnings
+addopts = -p no:warnings -m "not int"
+markers =
+    int: integration tests
