chore: switch to poetry
Signed-off-by: Daniel Bluhm <dbluhm@pm.me>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,18 +1,22 @@
 FROM bcgovimages/aries-cloudagent:py36-1.16-0_0.6.0
 
+RUN pip3 install poetry
+RUN poetry config virtualenvs.create false
+
+# Make site packages location more accessible (for use with volumes)
+RUN ln -s $(pyenv prefix)/lib/python3.6/site-packages site-packages
+
 USER root
 COPY http_uniresolver aries-acapy-plugin-http-uniresolver/http_uniresolver
-COPY requirements.txt aries-acapy-plugin-http-uniresolver
 COPY README.md aries-acapy-plugin-http-uniresolver
 COPY setup.py aries-acapy-plugin-http-uniresolver
+COPY pyproject.toml aries-acapy-plugin-http-uniresolver
+COPY poetry.lock aries-acapy-plugin-http-uniresolver
 COPY docker/default.yml .
 RUN chown -R indy:indy aries-acapy-plugin-http-uniresolver
 USER $user
 
-# Make ACA-Py Install location more accessible
-RUN ln -s /home/indy/.pyenv/versions/3.6.13/lib/python3.6/site-packages site-packages
-
-RUN pip3 install -e ./aries-acapy-plugin-http-uniresolver
+RUN cd aries-acapy-plugin-http-uniresolver; poetry install --no-dev
 
 ENTRYPOINT ["/bin/bash", "-c", "aca-py \"$@\"", "--"]
 CMD ["start", "--arg-file", "default.yml"]
