--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest-asyncio = "^0.14.0"
 asynctest = "0.13.0"
 black = "^20.8b1"
 flake8 = "^3.9.0"
+pre-commit = "^2.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
