--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -15,10 +15,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Black Code Formatter
-        uses: lgeiger/black-action@v1.0.1
+      - name: Cache black install
+        id: cache-black
+        uses: actions/cache@v2
         with:
-            args: "--check http_uniresolver"
+            path: ~/.cache/pip
+            key: ${{ runner.os }}-pip-${{ matrix.python-version }}-20.8b1
+      - name: Install black
+        if: steps.cache-black.outputs.cache-hit != 'true'
+        run: |
+            pip install black==20.8b1
+      - name: Black Format Check
+        run: |
+            black --check http_uniresolver
 
   test:
     name: Tests
@@ -33,8 +42,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Python Poetry Action
-      uses: abatilo/actions-poetry@v2.1.0
+    - name: Cache poetry install
+      id: cache-poetry
+      uses: actions/cache@v2
+      with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-1.1.5
+    - name: Install poetry
+      if: steps.cache-poetry.outputs.cache-hit != 'true'
+      run: |
+          pip install poetry==1.1.5
     - name: Cache dependencies
       id: cache-deps
       uses: actions/cache@v2
