--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -14,8 +14,16 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.6
-    - name: Python Poetry Action
-      uses: abatilo/actions-poetry@v2.1.0
+    - name: Cache poetry install
+      id: cache-poetry
+      uses: actions/cache@v2
+      with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-1.1.5
+    - name: Install poetry
+      if: steps.cache-poetry.outputs.cache-hit != 'true'
+      run: |
+          pip install poetry==1.1.5
     - name: Cache dependencies
       id: cache-deps
       uses: actions/cache@v2
