--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,13 @@ description = "DID Resolver HTTP bindings for Universal Resolver for ACA-Py"
 authors = ["Daniel Bluhm <dbluhm@pm.me>"]
 license = "Apache-2.0"
 readme = "README.md"
+repository="https://github.com/sicpa-dlab/aries-acapy-plugin-http-uniresolver"
 
 [tool.poetry.dependencies]
-python = "^3.6.3"
-aries-cloudagent = {git = "https://github.com/sicpa-dlab/aries-cloudagent-python", rev = "feature/did-resolver"}
+python = "^3.6.9"
+aries-cloudagent = {git = "https://github.com/hyperledger/aries-cloudagent-python", rev = "main"}
 PyYAML = "~=5.3.1"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
@@ -28,3 +30,4 @@ pre-commit = "^2.11.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
