HTTP Plugin Demo: resolving & verification
Signed-off-by: Luis Gomez <luis.gomezalonso@sicpa.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ markers = [
 name = "http-uniresolver"
 version = "0.1.0"
 description = "DID Resolver HTTP bindings for Universal Resolver for ACA-Py"
-authors = ["Daniel Bluhm <dbluhm@pm.me>"]
+authors = ["Daniel Bluhm <dbluhm@pm.me>", "Luis Gomez <luis.gomezalonso@sicpa.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 repository="https://github.com/sicpa-dlab/aries-acapy-plugin-http-uniresolver"
@@ -16,7 +16,8 @@ repository="https://github.com/sicpa-dlab/aries-acapy-plugin-http-uniresolver"
 [tool.poetry.dependencies]
 python = "^3.6.9"
 aries-cloudagent = {git = "https://github.com/hyperledger/aries-cloudagent-python", rev = "main"}
-PyYAML = "~=5.3.1"
+PyYAML = "~=5.4"
+ecdsa = "~=0.16.1"
 
 
 [tool.poetry.dev-dependencies]
