--- a/docker/default.yml
+++ b/docker/default.yml
@@ -17,8 +17,7 @@ endpoint:
   - ws://localhost:3000
 
 # Ledger
-# Use Sovrin Staging Net. Become an endorser at https://selfserve.sovrin.org.
-genesis-url: https://raw.githubusercontent.com/sovrin-foundation/sovrin/master/sovrin/pool_transactions_sandbox_genesis
+no-ledger: true
 
 # Connections
 debug-connections: true
@@ -27,27 +26,7 @@ debug-presentations: true
 auto-accept-invites: true
 auto-accept-requests: true
 
-# Generate Admin Invitation
-connections-invite: true
-invite-label: ACA-Py (Admin)
-invite-metadata-json: '{"group": "admin"}'
 
-# Credentials and Presentations
-preserve-exchange-records: true
-auto-store-credential: true
-auto-respond-credential-proposal: true
-auto-respond-credential-offer: true
-auto-respond-credential-request: true
-
-auto-respond-presentation-proposal: true
-auto-respond-presentation-request: true
-auto-verify-presentation: true
-
-# Wallet
-wallet-name: default
-wallet-type: indy
-wallet-key: "insecure, for use in demo only"
-auto-provision: true
 
 # Enable undelivered queue
 # Important for communication with toolbox over http (as opposed to ws)
