Allow external configuration. setup method overloaded
Signed-off-by: Luis Gomez <luis.gomezalonso@sicpa.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,22 +1,23 @@
-FROM bcgovimages/aries-cloudagent:py36-1.16-0_0.7-pre.0
+FROM bcgovimages/von-image:py36-1.15-1
 
-RUN pip3 install poetry
-RUN poetry config virtualenvs.create false
-
-# Make site packages location more accessible (for use with volumes)
-RUN ln -s $(pyenv prefix)/lib/python3.6/site-packages site-packages
+RUN pip3 install --no-cache-dir poetry
 
 USER root
-COPY http_uniresolver aries-acapy-plugin-http-uniresolver/http_uniresolver
-COPY README.md aries-acapy-plugin-http-uniresolver
-COPY setup.py aries-acapy-plugin-http-uniresolver
-COPY pyproject.toml aries-acapy-plugin-http-uniresolver
-COPY poetry.lock aries-acapy-plugin-http-uniresolver
-COPY docker/default.yml .
-RUN chown -R indy:indy aries-acapy-plugin-http-uniresolver
+COPY http_uniresolver http_uniresolver
+COPY ./README.md .
+COPY ./setup.py .
+COPY ./pyproject.toml .
+COPY ./poetry.lock .
+COPY ./docker/default.yml .
+COPY docker/plugin-config.yaml .
+
+RUN chown -R indy:indy .
 USER $user
 
-RUN cd aries-acapy-plugin-http-uniresolver; poetry install --no-dev
+RUN poetry install --no-dev
 
-ENTRYPOINT ["/bin/bash", "-c", "aca-py \"$@\"", "--"]
+# Make site packages location more accessible (for use with volumes)
+RUN ln -s $(poetry env info -p)/lib/python3.6/site-packages site-packages
+
+ENTRYPOINT ["/bin/bash", "-c", "poetry run aca-py \"$@\"", "--"]
 CMD ["start", "--arg-file", "default.yml"]
