--- a/docker/default.yml
+++ b/docker/default.yml
@@ -4,9 +4,8 @@ label: Aries Cloud Agent + HTTP Uniresovler Plugin
 admin: [0.0.0.0, 3001]
 admin-insecure-mode: true
 
-# Load toolbox plugin
-plugin:
-  - http_uniresolver
+# Load plugin + config by file
+plugin-config: plugin-config.yaml
 
 # Transport
 inbound-transport:
