plugin config through context.settings
Signed-off-by: Luis Gomez <luis.gomezalonso@sicpa.com>

--- a/docker/plugin-config.yaml
+++ b/docker/plugin-config.yaml
@@ -1,6 +1,4 @@
-plugins:
-  - plugin_name: Universal Resolver
-    local_directory: http_uniresolver
+http_uniresolver:
     methods:
       - "sov"
       - "abt"
