fixes for the new implementation
Signed-off-by: Luis Gomez <luis.gomezalonso@sicpa.com>

--- a/docker/default.yml
+++ b/docker/default.yml
@@ -7,7 +7,7 @@ admin-insecure-mode: true
 # Load plugin + config by file
 plugin:
   - http_uniresolver
-plugins-config: plugin-config.yaml
+plugin-config: plugin-config.yaml
 
 # Transport
 inbound-transport:
