--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ ecdsa = "~=0.16.1"
 
 
 [tool.poetry.dependencies.aries-cloudagent]
-    git = "https://github.com/sicpa-dlab/aries-cloudagent-python"
-    rev = "feature/plugin-config-by-file"
+    git = "https://github.com/hyperledger/aries-cloudagent-python"
+    rev = "main"
     # Temporarily use extras; these should go away once fixed in master
     extras = ["indy", "bbs"]
 
