fix: demo after renames
Signed-off-by: Daniel Bluhm <dbluhm@pm.me>

--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
 
   resolver:
-    image: acapy-http-uniresolver
+    image: acapy-resolver-universal
     build:
       context: ..
       dockerfile: docker/Dockerfile
