--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -31,7 +31,7 @@ jobs:
             pip install black==20.8b1
       - name: Black Format Check
         run: |
-            black --check http_uniresolver
+            black --check .
 
   test:
     name: Tests
