--- a/.github/workflows/code-quality-check.yml
+++ b/.github/workflows/code-quality-check.yml
@@ -7,11 +7,14 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+
+env:
+  FLAKE8_VERSION: 3.9.2
+  BLACK_VERSION: 21.8b0
 
 jobs:
   format:
-    name: Formatting (with black)
+    name: Format and Lint Check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,60 +26,23 @@ jobs:
         id: cache-env
         uses: actions/cache@v2
         with:
-            path: ${{ env.pythonLocation }}
-            key: ${{ runner.os }}-formatting-black-20.8b1
-      - name: Install black
+            path: env
+            key: ${{ runner.os }}-format-lint-${{ env.FLAKE8_VERSION }}-${{ env.BLACK_VERSION }}-${{ hashFiles('.github/workflows/code-quality-check.yml') }}
+      - name: create virtual environment
         if: steps.cache-env.outputs.cache-hit != 'true'
         run: |
-            pip install black==20.8b1
+          python -m venv env
+      - name: Install dependencies
+        if: steps.cache-env.outputs.cache-hit != 'true'
+        run: |
+            env/bin/python -m pip install black==${{ env.BLACK_VERSION }}
+            env/bin/python -m pip install flake8==${{ env.FLAKE8_VERSION }}
       - name: Black Format Check
         run: |
-            black --check .
-
-  test:
-    name: Tests
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Cache python environment
-      id: cache-env
-      uses: actions/cache@v2
-      with:
-          path: ${{ env.pythonLocation }}
-          key: ${{ runner.os }}-testing-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
-    - name: Install poetry
-      if: steps.cache-env.outputs.cache-hit != 'true'
-      run: |
-          pip install poetry==1.1.5
-    - name: Setup poetry environment
-      id: setup-poetry-env
-      run: |
-          poetry env use $(which python)
-          echo "::set-output name=poetry-env::$(poetry env info --path)"
-    - name: Cache poetry environment
-      id: cache-poetry
-      uses: actions/cache@v2
-      with:
-          path: ${{ steps.setup-poetry-env.outputs.poetry-env }}
-          key: ${{ runner.os }}-poetry-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
-    - name: Install dependencies
-      if: steps.cache-poetry.outputs.cache-hit != 'true'
-      run: |
-          poetry install
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        poetry run pytest
+            env/bin/python -m black --check universal_resolver tests
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          env/bin/python -m flake8 . --exclude=env --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          env/bin/python -m flake8 . --exclude=env --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
