fix: int test invocation
Signed-off-by: Daniel Bluhm <dbluhm@pm.me>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,4 +51,4 @@ jobs:
         poetry run pytest ./tests
     - name: Run integration tests with pytest
       run: |
-        poetry run pytest ./int
+        poetry run pytest -m int ./int
