--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.6.9"
-aries-cloudagent = "^0.7.4"
+aries-cloudagent = ">=0.7.3,<=0.7.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
